--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 07_CoreJS/node_modules/
 08_ES6-shim/node_modules/
 06_ClosureCompile/closure-compiler-v20161024.jar
+
+09_CallbackHell/closure-compiler-v20161024.jar
